--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -44,9 +44,9 @@ jobs:
         working-directory: /var/lib/nginx/gh
         run: |
           echo "$PR_URL" | grep '^https://api.github.com/repos/oVirt/'
-          echo "$COMMENT" | egrep '^/ost(/ost)?( [a-z\-]+( [a-z0-9]+)?)?$'
-          SUITE=$(echo "$COMMENT" | cut -d " " -f2)
-          DISTRO=$(echo "$COMMENT" | cut -d " " -f3)
+          echo "$COMMENT" | egrep '^/ost( [a-z\-]+( [a-z0-9]+)?)?$'
+          SUITE=$(echo "$COMMENT" | cut -d " " -s -f2)
+          DISTRO=$(echo "$COMMENT" | cut -d " " -s -f3)
           SUITE=${SUITE:-basic-suite-master}
           DISTRO=${DISTRO:-el8stream}
           SHA=$(curl -sS ${PR_URL} | jq -r .head.sha)
