NOT MERGE: check errors failing in tox for docs

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = deps, flake8, pylint, black, broken-symlinks
+envlist = deps, flake8, pylint, black, broken-symlinks, docs
 skipsdist = true
 
 [testenv]
