basic: Use Selenium grid from storage VM
This patch gets rid of all the code that used podman to run Selenium
grid. Instead, we're using the one that exists in 'storage-base' VM.

Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>
Change-Id: Ib37f3d4267a96851fe9b42a41d9ba3e711408589

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -8,6 +8,7 @@
       - ost-images-el8stream-engine-installed
       - ost-images-el8stream-host-installed
       - ost-images-node-base
+      - ost-images-storage-base
 
   tasks:
     - name: enable nested virtualization on intel
@@ -87,7 +88,6 @@
               - libxml2-devel
               - openssl
               - openssl-devel
-              - podman
               - "{{ python_pkg }}"
               - "{{ python_pkg }}-devel"
               - qemu-kvm
