# This is a combination of 2 commits. # This is the 1st commit message:
setup: firewalld kickstart fix, take 2

# This is the commit message #2:

do not skip upgrade of postgresql-jdbc

previous patch was not a proper revert, we also want to stop excluding this
package from dnf updates.

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -166,7 +166,7 @@
       become: true
 
     - name: allow port 2222 for IPv6 socks proxy
-      shell: firewall-cmd --state || systemctl start firewalld; firewall-cmd --permanent --add-port 2222/tcp --zone=libvirt
+      shell: sed '/service name.*ssh/ a <port port="2222" protocol="tcp"/>'  /usr/lib/firewalld/zones/libvirt.xml > /etc/firewalld/zones/libvirt.xml; firewall-cmd --state && firewall-cmd --reload
       become: true
 
   handlers:
