setup: Start and enable firewalld
Change-Id: I32e581ba03bd72212f34fd45785dc204bc4b260e
Signed-off-by: Yedidyah Bar David <didi@redhat.com>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -165,6 +165,13 @@
       shell: semanage permissive -a virtlogd_t
       become: true
 
+    - name: Start and enable firewalld
+      systemd:
+        name: firewalld.service
+        state: started
+        enabled: yes
+      become: true
+
     - name: allow port 2222 for IPv6 socks proxy
       shell: sed '/service name.*ssh/ a <port port="2222" protocol="tcp"/>' /usr/lib/firewalld/zones/libvirt.xml > /etc/firewalld/zones/libvirt.xml; firewall-cmd --state && firewall-cmd --reload
       become: true
