setup_for_ost: Move collection install to a playbook

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -78,6 +78,9 @@
             state: present
           become: true
 
+        - name: install galaxy collections
+          command: ansible-galaxy collection install community.general openstack.cloud
+
         - name: install required packages for OST
           dnf:
             name:
