tox: Add ansible-lint env

--- a/tox.ini
+++ b/tox.ini
@@ -94,6 +94,12 @@ commands =
 deps =
     -r docs/requirements.txt
 
+[testenv:ansible-lint]
+deps =
+    ansible-lint
+commands =
+    ansible-lint -x yaml[truthy],no-changed-when -p common/setup/setup_playbook.yml common/scripts/fetch_artifacts.yml
+
 [flake8]
 max-line-length = 119
 extend-ignore = E203
