--- a/tox.ini
+++ b/tox.ini
@@ -98,7 +98,11 @@ deps =
 deps =
     ansible-lint
 commands =
-    ansible-lint -x yaml[truthy],no-changed-when -p common/setup/setup_playbook.yml common/scripts/fetch_artifacts.yml
+    ansible-lint \
+        --skip-list yaml[truthy],no-changed-when,package-latest \
+        --parseable \
+        common/setup/setup_playbook.yml \
+        common/scripts/fetch_artifacts.yml
 
 [flake8]
 max-line-length = 119
