ansible: Fix new ansible-lint warnings

--- a/common/scripts/fetch_artifacts_playbook.yml
+++ b/common/scripts/fetch_artifacts_playbook.yml
@@ -1,6 +1,7 @@
 #!/usr/bin/ansible-playbook
 
-- hosts: all
+- name: Collect and extract artifacts
+  hosts: all
 
   vars:
     archive_name: artifacts.tar.gz
