--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -41,7 +41,7 @@ jobs:
         env:
           OST_APP_ID: 164117
           PR_URL: "${{ github.event.issue.pull_request.url }}${{ github.event.inputs.pr_url }}"
-          COMMENT: "${{ github.event.comment.body }}${{ inputs.comment }}${{ github.event.inputs.comment }}"
+          COMMENT: "${{ github.event.comment.body }}${{ github.event.inputs.comment }}"
         working-directory: /var/lib/nginx/gh
         run: |
           echo "$PR_URL" | grep '^https://api.github.com/repos/oVirt/'
