--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ requests
 selenium==4.4.3
 # network suite deps
 # TODO Use pip version once released openstacksdk>=0.62.0
-git+https://github.com/openstack/openstacksdk.git@master
+git+https://github.com/openstack/openstacksdk.git@44c5515
 # ost_utils
 paramiko
 PyYAML
