skip more ansible lint errors

--- a/tox.ini
+++ b/tox.ini
@@ -99,7 +99,7 @@ deps =
     ansible-lint
 commands =
     ansible-lint \
-        --skip-list yaml[truthy],no-changed-when,package-latest \
+        --skip-list yaml[truthy],no-changed-when,package-latest,yaml[octal-values],no-handler \
         --parseable \
         common/setup/setup_playbook.yml \
         common/scripts/fetch_artifacts_playbook.yml
