setup: always update ost-images
Always update ost-images when running setup, otherwise you might end up
with outdated images.

Signed-off-by: Peter Boden <peter.boden@team.blue>

--- a/common/setup/setup_playbook.yml
+++ b/common/setup/setup_playbook.yml
@@ -108,6 +108,7 @@
     - name: Install ost images
       ansible.builtin.dnf:
         name: "{{ ost_images_rpms | default(default_ost_images_rpms) }}"
+        state: latest  # noqa: package-latest
       become: true
 
     - name: Add user to relevant groups
