requirements: use main version of python-ovirt-engine-sdk4
Use the main version of our Python SDK.
This makes it possible to run CI on new things added in the SDK.

Signed-off-by: Jean-Louis Dupond <jean-louis@dupond.be>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # PIP requirements for OST
-ovirt-engine-sdk-python>=4.6.2
+./python-ovirt-engine-sdk4
 ansible-runner
 pytest==6.2.2
 # basic suite deps
