--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
 
 [testenv:flake8]
 deps =
-    flake8==3.9.0
+    flake8
 commands =
     {envpython} -m flake8 \
         ost_utils \
@@ -32,7 +32,7 @@ sitepackages = false
 passenv = *
 deps =
     -rrequirements.txt
-    pylint==2.7.2
+    pylint
 commands =
     {envpython} -m pylint \
         -j{env:PYLINT_JOBS:2} \
@@ -50,8 +50,8 @@ commands =
 
 [testenv:black]
 deps =
-    black==21.12b0
-    click==8.0.2
+    black
+    click
 commands =
     {envpython} -m black \
         -l 119 \
