ci: fix support for other suites
By default only the ost-images for basic-suite-master were installed.
To fix this:
- Adjust `ost-images.sh` to also set env vars for the packages that
  contain each ost-image.
- Add a new helper script `ost-image-packages.sh`, which will create a
  json file that can be passed to `setup-for-ost.sh`. This json file
  contains the list of ost-images packages that would need to be
  installed. Passing this json file to the setup is functionally that
  was already there.
- Adjust the workflow to run this new helper script before doing the
  setup.

Signed-off-by: Peter Boden <peter.boden@team.blue>

--- a/.github/workflows/ost.yaml
+++ b/.github/workflows/ost.yaml
@@ -91,7 +91,14 @@ jobs:
           ref: ${{ env.OST_REF }}
 
       - name: Setup ost 
-        run: /usr/bin/bash setup_for_ost.sh -y
+        run: |
+          /usr/bin/bash common/helpers/ost-image-packages.sh $SUITE $DISTRO
+          if [ -f ost_image_vars.json ]; then
+            jq . ost_image_vars.json
+            /usr/bin/bash setup_for_ost.sh ost_image_vars.json -y
+          else
+            /usr/bin/bash setup_for_ost.sh -y
+          fi
       
       - name: Comment on PR that ost is running
         if: github.event_name != 'workflow_dispatch'
